<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Configurazione1"
    android:id="@+id/scrollView1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <TextView
                android:id="@+id/conf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:paddingBottom="7dp"
                android:text="@string/conf"
                android:textColor="@color/titlePrimary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/confDescr"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/confDescr"
                android:textSize="18sp" />


            <ImageView
                android:id="@+id/gear"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/gear"
                android:visibility="visible"
                app:srcCompat="@drawable/settings" />

            <EditText
                android:id="@+id/port1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginTop="18dp"
                android:gravity="top"
                android:hint="@string/port1"
                android:inputType="text"
                android:padding="12dp"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/port2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:hint="@string/port2"
                android:inputType="text"
                android:padding="12dp"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/port3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:hint="@string/port3"
                android:inputType="text"
                android:padding="12dp"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/port4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:hint="@string/port4"
                android:inputType="text"
                android:padding="12dp"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/port5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:hint="@string/port5"
                android:inputType="text"
                android:padding="12dp"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/port6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:hint="@string/port6"
                android:inputType="text"
                android:padding="12dp"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/port7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:hint="@string/port7"
                android:inputType="text"
                android:padding="12dp"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/port8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:textSize="16sp"
                android:hint="@string/port8"
                android:inputType="text"
                android:padding="12dp"
                android:visibility="visible" />

            <Button
                android:id="@+id/avantiConf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="36dp"
                android:layout_marginRight="32dp"
                android:onClick="sendForward"
                android:text="@string/avantiConf"
                android:textSize="16sp"
                android:padding="2sp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/white"
                android:background="@drawable/submit" />

        </LinearLayout>
    </ScrollView>
