<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".temperatura"
    android:id="@+id/scrollView15">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <TextView
            android:id="@+id/temper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:paddingBottom="7dp"
            android:text="@string/tempTitle"
            android:textColor="@color/titlePrimary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/confDescr"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/tempDesc"
            android:textSize="18sp" />

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="6dp"

                >

                <TextView
                    android:text="@string/tempAttuale"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/temperatura"
                    android:gravity="end"
                    android:paddingLeft="4dp"
                    android:paddingStart="4dp"
                    android:paddingRight="0dp"
                    android:paddingEnd="0dp"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:id="@+id/loadingPanel2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center" >

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="true" />
                </RelativeLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                >

                <TextView
                    android:text="@string/umidAttuale"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/umidita"
                    android:gravity="end"
                    android:paddingLeft="4sp"
                    android:paddingStart="4sp"
                    android:paddingRight="0sp"
                    android:paddingEnd="0sp"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:id="@+id/loadingPanel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center" >

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="true" />
                </RelativeLayout>
            </TableRow>
        </TableLayout>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:padding="1dp"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            android:text="@string/checkBoxDefault" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:padding="1dp"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            android:text="@string/checkBoxDefault" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:padding="1dp"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            android:text="@string/checkBoxDefault" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:padding="1dp"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            android:text="@string/checkBoxDefault" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:padding="1dp"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            android:text="@string/checkBoxDefault" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:padding="1dp"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            android:text="@string/checkBoxDefault" />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:padding="1dp"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            android:text="@string/checkBoxDefault" />

        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:padding="1dp"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            android:text="@string/checkBoxDefault" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quandoTemp"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerMagg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <EditText
                android:id="@+id/tempImpostata"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />


        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            android:textSize="16sp"
            android:padding="2sp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:background="@drawable/submit"
            android:onClick="sendDataToSensoreTemperatura"
            android:text="@string/salvaModifica" />

    </LinearLayout>


</ScrollView>
